# braintrust-streamlit-app

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
evals/: eval_chat.py
helpers/: helpers.py
scorers/: scores.py
tools/: retriever.py
