[project]
name = "braintrust-streamlit-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.52.2",
    "autoevals>=0.0.129",
    "braintrust[cli]>=0.1.3",
    "openai>=1.84.0",
    "pinecone[grpc]>=7.0.2",
    "streamlit>=1.45.1",
    "voyageai>=0.3.2",
]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
    "watchdog>=6.0.0",
]
